# agentic_rag_project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/: agent.py  api.py  db_utils.py  models.py  prompts.py  providers.py  tools.py
ingestion/: chunker.py  extract_files.py  ingest.py
sql/: schema.sql
tests/: conftest.py
tests/agent/: test_db_utils.py  test_models.py
tests/ingestion/: test_chunker.py
ui/: app.py
